manifests/dev/tunarr/Namespace-tunarr.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: tunarr
