manifests/dev/tunarr/Deployment-tunarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: tunarr
    app.kubernetes.io/name: tunarr
    app.kubernetes.io/version: latest
  name: tunarr
  namespace: tunarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: tunarr
      app.kubernetes.io/name: tunarr
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: tunarr
        app.kubernetes.io/name: tunarr
    spec:
      automountServiceAccountToken: true
      containers:
        - args: []
          command:
            - sh
            - -c
            - ulimit -n 65536 && exec /tunarr/tunarr
          image: chrisbenincasa/tunarr:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
          name: tunarr
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          securityContext:
            capabilities:
              add:
                - SYS_ADMIN
            privileged: true
            readOnlyRootFilesystem: false
          volumeMounts:
            - mountPath: /config/tunarr
              name: config
              readOnly: false
            - mountPath: /tmp
              name: tmp
            - mountPath: /dev/dri
              name: dri
      securityContext:
        fsGroup: 0
        runAsGroup: 0
        runAsUser: 0
        supplementalGroups:
          - 303
      serviceAccountName: default
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: tunarr-tunarr-config
        - emptyDir: {}
          name: tmp
        - hostPath:
            path: /dev/dri
            type: Directory
          name: dri
