manifests/dev/tunarr/Service-tunarr-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: tunarr-nodeport
  namespace: tunarr
spec:
  ports:
    - name: http
      nodePort: 30080
      port: 8000
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: tunarr
    app.kubernetes.io/name: tunarr
  type: NodePort
