manifests/dev/tunarr/Service-tunarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: tunarr
  namespace: tunarr
spec:
  ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: tunarr
    app.kubernetes.io/name: tunarr
  type: ClusterIP
