manifests/dev/tunarr/Ingress-tunarr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: tunarr
  namespace: tunarr
spec:
  ingressClassName: traefik
  rules:
    - host: tunarr.home.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: tunarr
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - tunarr.home.kronkltd.net
      secretName: tunarr-tls
